--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "locomotive-scroll": "^5.0.0-beta.21",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "^6.2.0-preview-contacts.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
